--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <script>
     window.$docsify = {
       name: 'PP AISYAH',
+      homepage:"file markdown",
       loadSidebar: true,
       subMaxLevel: 2
       
