--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <script>
     window.$docsify = {
       name: 'PP AISYAH',
-      homepage:"file markdown",
+      homepage:"/file markdown/pengantar.md",
       loadSidebar: true,
       subMaxLevel: 2
       
